# CalcV2

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  run.sh  todo.md
.cache/clangd/index/: ast.cpp.B0E921427C2D741D.idx  ast.h.0AABD87189DC4BDA.idx  compiler.cpp.CFADE1B2E38127F3.idx  compiler.h.5F6DCA6AA9AED7F5.idx  defs.h.DB460E5CE403792F.idx  foo.cpp.CE9C5D4405157452.idx  lexer.cpp.E6782876A76C3FF5.idx  lexer.h.57DCC2EB6A5C5C62.idx  main.cpp.CB2A148C64CCE767.idx  parser.cpp.175C5E2266417A54.idx  parser.h.E533FDF2ABDE0D27.idx  print_visitor.cpp.695C731B9D398C1F.idx  print_visitor.h.71F18355236F943A.idx  vm.cpp.2CD08D34912FFAF6.idx  vm.h.6E430E93F8665E8E.idx
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ast.cpp  compiler.cpp  foo.cpp  lexer.cpp  parser.cpp  print_visitor.cpp  vm.cpp
src/core/include/: ast.h  compiler.h  defs.h  lexer.h  parser.h  print_visitor.h  vm.h
src/core/include/ast/: ast.h  types.h  typetable.h
src/core/include/compile/: codegenerator.h  compiler.h  defs.h  lexer.h  parser.h  typechecker.h
src/core/include/runtime/: bytecode.h  value.h  vm.h  vtables.h
src/core/include/utils/: printast.h  utils.h
src/core/src/: ast.cpp  compiler.cpp  lexer.cpp  parser.cpp  print_visitor.cpp  vm.cpp
src/core/src/ast/: ast.cpp  typetable.cpp
src/core/src/compile/: codegenerator.cpp  compiler.cpp  lexer.cpp  parser.cpp  typechecker.cpp
src/core/src/runtime/: value.cpp  vm.cpp  vtables.cpp
src/core/src/utils/: printast.cpp  utils.cpp
